<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_logs">

    <fragment
        android:id="@+id/navigation_logs"
        android:name="io.github.installalogs.ui.log.LogFragment"
        android:label="@string/logs"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/navigation_configuration"
        android:name="io.github.installalogs.ui.configuration.ConfigurationFragment"
        android:label="@string/configuration"
        tools:layout="@layout/fragment_configuration" />


    <fragment
        android:id="@+id/navigation_about"
        android:name="io.github.installalogs.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
</navigation>